--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -26,6 +28,7 @@
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "openai": "^4.52.3",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.4.168",
